--- a/test/pages/order/detail.wxml
+++ b/test/pages/order/detail.wxml
@@ -47,7 +47,7 @@
       </view>
     </view>
     <block wx:if="{{ orderDetail.status == 'ORDERED' }}">
-      <view class="pay-btn">00:52 过期 | 立即付款</view>
+      <view class="pay-btn">立即付款</view>
     </block>
   </view>
 
