--- a/test/pages/order/order-list/index.wxml
+++ b/test/pages/order/order-list/index.wxml
@@ -50,7 +50,7 @@
         </view>
       </view>
       <block wx:if="{{ status == 'unpaid' }}">
-        <view class="pay-btn">00:52 过期 | 立即付款</view>
+        <view class="pay-btn">立即付款</view>
       </block>
     </view>
   </view>
