--- a/test/pages/mine/mine.wxml
+++ b/test/pages/mine/mine.wxml
@@ -18,7 +18,8 @@
 
       <image src='../../res/imgs/ic_head_bg.png' class='head-bg'></image>
     </view>
-    <block wx:if="{{!hasUserInfo && canIUse}}">
+
+    <block wx:if="{{!hasUserInfo}}">
       <view class='nickArea'>
         <button class='authBtn' open-type="getUserInfo" bindgetuserinfo="getUserInfo">
           点击登录
@@ -32,27 +33,28 @@
     <view class='vSet'>
       <image src='../../res/imgs/ic_setting.png' class='settingIcon'></image>
     </view>
+    <view class='contact-service'>联系客服</view>
   </view>
 
   <view class='contentBg'>
     <view class='top-menu'>
-      <button class='transBg' hover-class='grayBg'>{{weilai}} 未来入住</button>
+      <button class='transBg' hover-class='grayBg'>{{future}} 未来入住</button>
       <view></view>
-      <button class='transBg' hover-class='grayBg'>{{zhengzai}} 正在确认</button>
+      <button class='transBg' hover-class='grayBg'>{{confirming}} 正在确认</button>
       <view></view>
-      <button class='transBg' hover-class='grayBg'>{{wancheng}} 完成旅程</button>
+      <button class='transBg' hover-class='grayBg'>{{finished}} 完成旅程</button>
     </view>
 
-		<view class="nav-menu-wrap">
-			<navigator url="/pages/order/index" class="nav-menu-item">
-				<image src='../../res/imgs/menu_bg1.jpg'></image>
-				<view class="nav-menu-text">我的旅程订单</view>
-			</navigator>
-			<navigator url="../collection/collection" class="nav-menu-item">
-				<image src='../../res/imgs/menu_bg2.jpg'></image>
-				<view class="nav-menu-text">我的收藏</view>
-			</navigator>
-		</view>
+    <view class="nav-menu-wrap">
+      <navigator url="/pages/order/index" class="nav-menu-item">
+        <image src='../../res/imgs/menu_bg1.jpg'></image>
+        <view class="nav-menu-text">我的旅程订单</view>
+      </navigator>
+      <navigator url="../collection/collection" class="nav-menu-item">
+        <image src='../../res/imgs/menu_bg2.jpg'></image>
+        <view class="nav-menu-text">我的收藏</view>
+      </navigator>
+    </view>
     <view style='height:1rpx;margin-top:30rpx;'></view>
 
     <block wx:for='{{textMenuItems}}' wx:key='menus'>
